--- a/Amazon Clone/index.html
+++ b/Amazon Clone/index.html
@@ -152,31 +152,31 @@
                 <a>Amazon Science</a>
             </ul>
             <ul>
-                <a>Get to Know Us</a>
-                <a>Careers</a>
-                <a>Blog</a>
-                <a>About Amazon</a>
-                <a>Investor Relations</a>
-                <a>Amazon Devices</a>
-                <a>Amazon Science</a>
+                <a>Make Money with Us</a>
+                <a>Sell Products on Amazon</a>
+                <a>Sell on Amazon Business</a>
+                <a>Sell apps on Amazon</a>
+                <a>Become a Affiliate</a>
+                <a>Advertise your product</a>
+                <a>Self-Publish with us</a>
+                <a>Host an Amazon Hub</a>
             </ul>
             <ul>
-                <a>Get to Know Us</a>
-                <a>Careers</a>
-                <a>Blog</a>
-                <a>About Amazon</a>
-                <a>Investor Relations</a>
-                <a>Amazon Devices</a>
-                <a>Amazon Science</a>
+                <a>Amazon Payment Products</a>
+                <a>Amazon Business Card</a>
+                <a>Shop with Points</a>
+                <a>Reload Your Balance</a>
+                <a>Amazon Currency Converter</a>
             </ul>
             <ul>
-                <a>Get to Know Us</a>
-                <a>Careers</a>
-                <a>Blog</a>
-                <a>About Amazon</a>
-                <a>Investor Relations</a>
-                <a>Amazon Devices</a>
-                <a>Amazon Science</a>
+                <a>Let Us Help You</a>
+                <a>Amazon and COVID-19</a>
+                <a>Your Account</a>
+                <a>Your Orders</a>
+                <a>Shipping Rates & Policies</a>
+                <a>Returns & Replacements</a>
+                <a>Manage Your Content and Devices</a>
+                <a>Help</a>
             </ul>
         </div>
 
